@@ -52,3 +52,6 @@ nz-alert {
   width: 100%;
   display: inline-block;
 }
+.mod-info-container {
+  max-width: 350px;
+}
