@@ -10,5 +10,5 @@ i {
   margin-right: 0.2rem;
 }
 p {
-  margin-bottom: 0.2rem;
+  margin-bottom: 0.3rem;
 }
